--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@faker-js/faker": "8.4.1",
     "@npmcli/arborist": "7.5.2",
     "@playwright/test": "1.44.0",
+    "@replayio/playwright": "^3.0.1",
     "@testing-library/jest-dom": "6.4.5",
     "@testing-library/react": "14.3.1",
     "@testing-library/user-event": "14.5.2",
