chore(auth): Fix auth build

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -4,6 +4,7 @@
     "isolatedModules": true,
     "moduleResolution": "NodeNext",
     "module": "NodeNext",
+    "rootDir": ".",
     "outDir": "dist"
   },
   "include": [
