chore(auth): Fix auth build

--- a/packages/router/tsconfig.json
+++ b/packages/router/tsconfig.json
@@ -6,6 +6,6 @@
   },
   "include": ["src", "./ambient.d.ts"],
   "references": [
-    { "path": "../auth" },
+    { "path": "../auth/tsconfig.build.json" },
   ]
 }
