reference tsconfig.build

--- a/packages/auth-providers/dbAuth/api/tsconfig.json
+++ b/packages/auth-providers/dbAuth/api/tsconfig.json
@@ -7,7 +7,7 @@
   },
   "include": ["src"],
   "references": [
-    { "path": "../../../auth" },
+    { "path": "../../../auth/tsconfig.build.json" },
     { "path": "../../../project-config" }
   ]
 }
