chore(build) reference auth.tsconfig.build (#10709)

--- a/packages/auth-providers/supabase/api/tsconfig.json
+++ b/packages/auth-providers/supabase/api/tsconfig.json
@@ -6,5 +6,7 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "references": [{ "path": "../../../auth" }]
+  "references": [
+    { "path": "../../../auth/tsconfig.build.json" }
+  ]
 }
