chore(exports): Seperate export for ServerAuthProvider

--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -18,6 +18,11 @@
       "types": "./dist/AuthProvider/ServerAuthProvider.d.ts",
       "import": "./dist/AuthProvider/ServerAuthProvider.js",
       "default": "./dist/cjs/AuthProvider/ServerAuthProvider.js"
+    },
+    "./dist/AuthProvider/ServerAuthProvider": {
+      "types": "./dist/AuthProvider/ServerAuthProvider.d.ts",
+      "import": "./dist/AuthProvider/ServerAuthProvider.js",
+      "default": "./dist/cjs/AuthProvider/ServerAuthProvider.js"
     }
   },
   "types": "./dist/index.d.ts",
