--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -14,6 +14,16 @@
       "import": "./dist/index.js",
       "default": "./dist/cjs/index.js"
     },
+    "./AuthProviderState": {
+      "types": "./dist/AuthProvider/AuthProviderState.d.ts",
+      "import": "./dist/AuthProvider/AuthProviderState.js",
+      "default": "./dist/cjs/AuthProvider/AuthProviderState.js"
+    },
+    "./dist/AuthProvider/AuthProviderState.js": {
+      "types": "./dist/AuthProvider/AuthProviderState.d.ts",
+      "import": "./dist/AuthProvider/AuthProviderState.js",
+      "default": "./dist/cjs/AuthProvider/AuthProviderState.js"
+    },
     "./ServerAuthProvider": {
       "types": "./dist/AuthProvider/ServerAuthProvider.d.ts",
       "import": "./dist/AuthProvider/ServerAuthProvider.js",
