Add Storybook (Vite) framework package (#10064)
Co-authored-by: Josh GM Walker <56300765+Josh-Walker-GM@users.noreply.github.com>
Co-authored-by: Tobbe Lundberg <tobbe@tlundberg.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ blog-test-project/*
 *.code-workspace
 .nova
 packages/**/redwoodjs-*.tgz
+packages/**/storybook-*.tgz
 packages/create-redwood-app/create-redwood-app.tgz
 
 # For esbuild.
