chore(auth): auth-supabase-api dependency fixes (#10719)

--- a/packages/auth-providers/supabase/api/tsconfig.json
+++ b/packages/auth-providers/supabase/api/tsconfig.json
@@ -6,7 +6,5 @@
     "outDir": "dist"
   },
   "include": ["src"],
-  "references": [
-    { "path": "../../../auth/tsconfig.build.json" }
-  ]
+  "references": [{ "path": "../../../api" }]
 }
