--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,7 +28,6 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.5",
-    "@iarna/toml": "2.2.5",
     "@opentelemetry/api": "1.8.0",
     "@opentelemetry/core": "1.22.0",
     "@opentelemetry/exporter-trace-otlp-http": "0.49.1",
@@ -75,6 +74,7 @@
     "prompts": "2.4.2",
     "rimraf": "5.0.7",
     "semver": "7.6.2",
+    "smol-toml": "^1.2.1",
     "string-env-interpolation": "1.0.1",
     "systeminformation": "5.22.9",
     "terminal-link": "2.1.1",
