--- a/packages/structure/package.json
+++ b/packages/structure/package.json
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.5",
-    "@iarna/toml": "2.2.5",
     "@prisma/internals": "5.14.0",
     "@redwoodjs/project-config": "workspace:*",
     "@types/line-column": "1.0.2",
@@ -44,6 +43,7 @@
     "lodash-decorators": "6.0.1",
     "lru-cache": "10.2.2",
     "proxyquire": "2.1.3",
+    "smol-toml": "1.2.1",
     "ts-morph": "15.1.0",
     "vscode-languageserver": "6.1.1",
     "vscode-languageserver-textdocument": "1.0.11",
