--- a/packages/cookie-jar/package.json
+++ b/packages/cookie-jar/package.json
@@ -1,29 +1,29 @@
 {
-  "name": "@redwoodjs/server-store",
+  "name": "@redwoodjs/cookie-jar",
   "version": "7.0.0",
   "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/redwoodjs/redwood.git",
-    "directory": "packages/server-store"
+    "directory": "packages/cookie-jar"
   },
   "license": "MIT",
   "type": "commonjs",
   "exports": {
-    "types": "./dist/serverStore.d.ts",
-    "default": "./dist/serverStore.js"
+    "types": "./dist/CookieJar.d.ts",
+    "default": "./dist/CookieJar.js"
   },
-  "types": "./dist/serverStore.d.ts",
+  "types": "./dist/CookieJar.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "tsx ./build.mts && run build:types",
-    "build:pack": "yarn pack -o redwoodjs-server-store.tgz",
+    "build:pack": "yarn pack -o redwoodjs-cookie-jar.tgz",
     "build:types": "tsc --build --verbose"
   },
   "dependencies": {
-    "@redwoodjs/auth": "workspace:*",
+    "cookie": "0.6.0",
     "esbuild": "0.21.3",
     "fast-glob": "3.3.2",
     "fs-extra": "11.2.0"
