--- a/packages/server-store/package.json
+++ b/packages/server-store/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@redwoodjs/auth": "workspace:*",
+    "@redwoodjs/cookie-jar": "workspace:*",
     "esbuild": "0.21.3",
     "fast-glob": "3.3.2",
     "fs-extra": "11.2.0"
