--- a/packages/server-store/tsconfig.json
+++ b/packages/server-store/tsconfig.json
@@ -10,6 +10,7 @@
   "include": ["src"],
   "references": [
     { "path": "../auth/tsconfig.build.json" },
+    { "path": "../cookie-jar" },
     { "path": "../framework-tools" }
   ]
 }
