--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -70,9 +70,11 @@
     "@babel/parser": "^7.22.16",
     "@babel/traverse": "^7.22.20",
     "@redwoodjs/auth": "workspace:*",
+    "@redwoodjs/cookie-jar": "workspace:*",
     "@redwoodjs/babel-config": "workspace:*",
     "@redwoodjs/internal": "workspace:*",
     "@redwoodjs/project-config": "workspace:*",
+    "@redwoodjs/server-store": "workspace:*",
     "@redwoodjs/web": "workspace:*",
     "@swc/core": "1.5.7",
     "@vitejs/plugin-react": "4.2.1",
