--- a/packages/vite/tsconfig.json
+++ b/packages/vite/tsconfig.json
@@ -6,9 +6,11 @@
   },
   "include": ["src/**/*", "./ambient.d.ts", "./modules.d.ts"],
   "references": [
+    { "path": "../cookie-jar" },
     { "path": "../internal" },
     { "path": "../project-config" },
     { "path": "../router" },
+    { "path": "../server-store" },
     { "path": "../web" }
   ]
 }
