RSC: Add 'use client' to auth templates

--- a/packages/auth-providers/azureActiveDirectory/setup/src/templates/web/auth.ts.template
+++ b/packages/auth-providers/azureActiveDirectory/setup/src/templates/web/auth.ts.template
@@ -1,3 +1,5 @@
+'use client'
+
 import { PublicClientApplication } from '@azure/msal-browser'
 
 import { createAuth } from '@redwoodjs/auth-azure-active-directory-web'
