--- a/packages/auth-providers/dbAuth/setup/src/templates/web/auth.webAuthn.ts.template
+++ b/packages/auth-providers/dbAuth/setup/src/templates/web/auth.webAuthn.ts.template
@@ -1,3 +1,5 @@
+'use client'
+
 import { createDbAuthClient, createAuth } from '@redwoodjs/auth-dbauth-web'
 import WebAuthnClient from '@redwoodjs/auth-dbauth-web/webAuthn'
 
