--- a/packages/cli/src/commands/generate/dbAuth/templates/login.webAuthn.tsx.template
+++ b/packages/cli/src/commands/generate/dbAuth/templates/login.webAuthn.tsx.template
@@ -1,5 +1,4 @@
-import { useRef, useState } from 'react'
-import { useEffect } from 'react'
+import { useEffect, useRef, useState } from 'react'
 
 import {
   Form,
