Start to add sbv CLI unit tests

--- a/packages/cli-packages/storybook-vite/tsconfig.json
+++ b/packages/cli-packages/storybook-vite/tsconfig.json
@@ -6,6 +6,7 @@
   },
   "include": ["src"],
   "references": [
+    { "path": "../../babel-config" },
     { "path": "../../cli-helpers" },
     { "path": "../../project-config" },
     { "path": "../../telemetry" },
