--- a/packages/cli-packages/storybook-vite/package.json
+++ b/packages/cli-packages/storybook-vite/package.json
@@ -17,9 +17,12 @@
     "build:pack": "yarn pack -o redwoodjs-cli-storybook-vite.tgz",
     "build:types": "tsc --build --verbose",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
-    "prepublishOnly": "NODE_ENV=production yarn build"
+    "prepublishOnly": "NODE_ENV=production yarn build",
+    "test": "yarn test:unit",
+    "test:unit": "yarn jest src"
   },
   "dependencies": {
+    "@redwoodjs/babel-config": "workspace:*",
     "@redwoodjs/cli-helpers": "workspace:*",
     "@redwoodjs/project-config": "workspace:*",
     "@redwoodjs/telemetry": "workspace:*",
@@ -33,6 +36,7 @@
   "devDependencies": {
     "@redwoodjs/framework-tools": "workspace:*",
     "@types/yargs": "17.0.32",
+    "jest": "29.7.0",
     "tsx": "4.10.3",
     "typescript": "5.4.5"
   },
