switch to change-case

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -48,6 +48,7 @@
     "boxen": "5.1.2",
     "camelcase": "6.3.0",
     "chalk": "4.1.2",
+    "change-case": "4.1.2",
     "ci-info": "4.0.0",
     "concurrently": "8.2.2",
     "configstore": "3.1.5",
@@ -65,7 +66,6 @@
     "latest-version": "5.1.0",
     "listr2": "6.6.1",
     "lodash": "4.17.21",
-    "param-case": "3.0.4",
     "pascalcase": "1.0.0",
     "pluralize": "8.0.0",
     "portfinder": "1.0.32",
