Reorder require and import

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,8 +23,8 @@
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.js",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/cjs/index.js",
+      "import": "./dist/index.js"
     },
     "./serverInject": {
       "require": "./dist/cjs/components/ServerInject.js",
