Make red squigglies go away on ssr project

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,9 +22,14 @@
   },
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/cjs/index.js",
-      "import": "./dist/index.js"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
     },
     "./serverInject": {
       "require": "./dist/cjs/components/ServerInject.js",
